[tool.poetry]
name = "ytpodgen"
version = "0.2.1"
description = "turns YouTube live streams into podcasts"
authors = ["harupong <harupong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
click = "^8.1.3"
loguru = "^0.6.0"
boto3 = "^1.26.89"
yt-dlp = "^2023.3.4"
podgen = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytpodgen = "ytpodgen.ytpodgen:cli"