[tool.poetry]
name = "ytpodgen"
version = "0.3.2"
description = "turns YouTube live streams into podcasts"
license = "MIT"
authors = ["harupong <harupong@gmail.com>"]
readme = "README.md"
repository = "https://github.com/harupong/ytpodgen"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
click = "^8.1.3"
loguru = "^0.6.0"
boto3 = "^1.26.89"
yt-dlp = "^2023.3.4"
podgen = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ytpodgen = "ytpodgen.ytpodgen:main"